--- a/plochonozi/test.html
+++ b/plochonozi/test.html
@@ -27,6 +27,9 @@
 
 			<div class="collapse navbar-collapse" id="navbarsDefault">
 				<ul class="navbar-nav ml-auto">
+						<li class="nav-item">
+								<a class="nav-link" href="dvz-plochonozi_metodicky-list.pdf">Metodický list</a>
+							</li>
 					<li class="nav-item dropdown">
 						<a class="nav-link dropdown-toggle" href="#" id="dropdown1" data-toggle="dropdown"
 						   aria-haspopup="true"
@@ -61,9 +64,9 @@
 		<div class="row d-flex justify-content-center">
 			<div class="col-lg-8">
 				<div class="text-center pt-4">
-					<button type="button" class="btn btn-outline-info control-button" id="prev">Zpět</button>
-					<button type="button" class="btn btn-outline-info control-button" id="next">Další</button>
-					<button type="button" class="btn btn-outline-info" id="start" style="display: none">Opakovat kvíz</button>
+					<button type="button" class="btn btn-outline-primary control-button" id="prev">Zpět</button>
+					<button type="button" class="btn btn-outline-primary control-button" id="next">Další</button>
+					<button type="button" class="btn btn-outline-primary" id="start" style="display: none">Opakovat kvíz</button>
 				</div>
 			</div>
 		</div>
@@ -72,18 +75,18 @@
 </main>
 
 <footer class="footer mt-auto py-3 text-muted bg-dark">
-	<div class="container">
-		<div class="row">
-			<div class="col-lg-6">
-				<p class="text-white-50 text-left">&copy; 2019 Podpora rozvoje digitální gramotnosti</p>
-			</div>
-			<div class="col-lg-6">
-				<p class="text-white-50 text-right">Naposledy aktualizováno 17.02.2019</p>
+		<div class="container">
+			<div class="row">
+				<div class="col-lg-6 py-1">
+					<p class="text-white-50 text-lg-left text-center">&copy; 2019 Podpora rozvoje digitální gramotnosti</p>
+				</div>
+				<div class="col-lg-6 py-1">
+					<p class="text-white-50 text-lg-right text-center">Naposledy aktualizováno 02.03.2019</p>
+				</div>
 			</div>
 		</div>
-	</div>
-	</div>
-</footer>
+		</div>
+	</footer>
 
 <!-- Optional JavaScript -->
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
