README, zapracování nedostatků

--- a/plochonozi/diagnostika.html
+++ b/plochonozi/diagnostika.html
@@ -279,7 +279,8 @@
 						</div>
 						<div class="card-body">
 							<p>Jak vytvořit svůj vlastní otisk chodidla je součástí kapitoly <a
-									href="#item-2">Plantogram (otisk chodidla)</a>.</p>
+									href="#item-2">Plantogram (otisk chodidla)</a>. Při tvorbě otisku chodidla je nutné plosky nohou zatížit přirozeným způsobem, 
+									tedy stoj mírně rozkročný. Pozor na přenášení celé váhy na jednu z dolních končetin.</p>
 						</div>
 					</div>
 
@@ -317,7 +318,7 @@
 								</li>
 							</ul>
 							<p>Pro ukázku průběhu skenování otisku chodidla jsme zvolili aplikaci Microsoft Office Lens,
-								následuje krátky fotografický návod (obrázek 9–12). Popis jednotlivých obrázků se
+								následuje krátký fotografický návod (obrázek 9–12). Popis jednotlivých obrázků se
 								zobrazí po rozkliknutí fotografie.</p>
 
 							<div class="row">
@@ -436,7 +437,7 @@
 								využití online výpočtu</h5>
 						</div>
 						<div class="card-body">
-							<p>Vypočítat index nohy pomocí Chippaux-Šmiřák koeficientu lze s využitím Excelu, či online kalkulačky na této stránce. Na videu 2 je ukázka výpočtu indexu nohy pomocí Excelu.</p>
+							<p>Vypočítat index nohy pomocí Chippaux-Šmiřák koeficientu lze s využitím Excelu, či online kalkulačky na této stránce. Na videu 2 je ukázka výpočtu indexu nohy pomocí Excelu. Není důležité v jakých jednotkách je výpočet proveden, je však nutné, aby obě hodnoty (A, B) měli totožné jednotky.</p>
 							<figure class="figure mx-auto d-block w-75 py-4">
 								<video class="rounded img-fluid" controls muted>
 									<source src="videos/excel.mp4" type="video/mp4">
