Drobné fixy, nové Geogebra video
Nové Geogebra video
text-justify odstraněn
Přidána fotka platogramu po zpracováná v aplikaci Geogebra
Odkaz na offline verzi

--- a/plochonozi/diagnostika.html
+++ b/plochonozi/diagnostika.html
@@ -77,7 +77,7 @@
 				<div class="col-lg-9">
 					<h3 class="h4 pt-4" id="item-1">Úvod</h3>
 					<hr class="my-4">
-					<p class="text-justify">Součástí toho modulu je diagnostika stavu nožní klenby pomocí metody
+					<p>Součástí toho modulu je diagnostika stavu nožní klenby pomocí metody
 						Chippaux-Šmiřák. Základem pro diagnostiku nožní klenby pomocí metody Chippaux-Šmiřák je
 						<mark>otisk chodidla</mark> (plantograf). Tuto metodu lze využít s použitím digitálních
 						technologií (mobil, tablet, PC), tak i bez nich.</p>
@@ -85,7 +85,7 @@
 
 					<h3 class="h4 pt-5" id="item-2">Plantogram (otisk chodidla)</h3>
 					<hr class="my-4">
-					<p class="text-justify">
+					<p>
 						Pomocí plantografu neboli otisku chodidla se diagnostikuje stav nožní klenby. K získání
 						plantogramu se nejčastěji používají tlakové koberce, plošiny či speciální vložky. Ve školních
 						podmínkách otisk chodidla můžeme vytvořit např. při použití barvy na tělo a následným otiskem
@@ -174,7 +174,7 @@
 
 					<h3 class="h4 pt-5" id="item-3">Index nohy</h3>
 					<hr class="my-4">
-					<p class="text-justify"><mark>Index nohy</mark> je poměr mezi nejužším a nejširším místem otisku
+					<p><mark>Index nohy</mark> je poměr mezi nejužším a nejširším místem otisku
 						nohy, tato místa se měří na kolmicích k vnější tečně plantogramu.</p>
 					<blockquote class="blockquote text-center my-4">
 						<p class="mb-0">i [%] = (a / b) × 100</p>
@@ -239,7 +239,7 @@
 					</div>
 					<h3 class="h4 pt-5" id="item-5">Použití digitálních technologií</h3>
 					<hr class="my-4">
-					<p class="text-justify">
+					<p>
 						Pro výpočet indexu nohy dle metody Chippaux-Šmiřák lze využít digitální technologie. Pro
 						diagnostiku tedy stačí pouze plantogram (otisk chodidla) a tablet.
 					</p>
@@ -427,6 +427,15 @@
 								<figcaption class="figure-caption text-center"><strong>Video 1</strong> Metoda
 									Chippaux-Šmiřák pomocí aplikace Geogebra</figcaption>
 							</figure>
+							<p>Na obrázku 14 je ukázán otisk chodidla s naměřenými hodnotami pro výpočet indexu nohy.</p>
+							<figure class="figure mx-auto d-block w-25 py-4">
+								<a class="lightbox-style" href="imgs/navod/plantogram-1.jpg" data-lightbox="plantogram"
+									data-title="Plantogram po zpracování v aplikaci Geogebra">
+									<img src="imgs/navod/plantogram-1.jpg" class="figure-img img-fluid rounded mx-auto d-block"
+										alt="Plantogram po zpracování v aplikaci Geogebra">
+								</a>
+								<figcaption class="figure-caption text-center"><strong>Obrázek 14</strong> Plantogram (Geogebra)</figcaption>
+							</figure>
 						</div>
 					</div>
 
@@ -437,7 +446,9 @@
 								využití online výpočtu</h5>
 						</div>
 						<div class="card-body">
-							<p>Vypočítat index nohy pomocí Chippaux-Šmiřák koeficientu lze s využitím Excelu, či online kalkulačky na této stránce. Na videu 2 je ukázka výpočtu indexu nohy pomocí Excelu. Není důležité v jakých jednotkách je výpočet proveden, je však nutné, aby obě hodnoty (A, B) měli totožné jednotky.</p>
+							<p>Vypočítat index nohy pomocí Chippaux-Šmiřák koeficientu lze s využitím Excelu, či online kalkulačky na této stránce. 
+								Na videu 2 je ukázka výpočtu indexu nohy pomocí Excelu. Není důležité v jakých jednotkách je výpočet proveden, 
+								je však nutné, aby obě hodnoty (A, B) měli totožné jednotky.</p>
 							<figure class="figure mx-auto d-block w-75 py-4">
 								<video class="rounded img-fluid" controls muted>
 									<source src="videos/excel.mp4" type="video/mp4">
