--- a/plochonozi/teorie.html
+++ b/plochonozi/teorie.html
@@ -80,7 +80,7 @@
             </a>
             <figcaption class="figure-caption text-center"><strong>Obrázek 1</strong> Evoluce člověka</figcaption>
           </figure>
-          <p class="text-justify">V průběhu vývoje člověka došlo současně s technologickým pokrokem k výrazné změně v
+          <p>V průběhu vývoje člověka došlo současně s technologickým pokrokem k výrazné změně v
             jeho pohybovém režimu.
             Po průmyslové revoluci (od 18. do 19. století) dochází postupně k usnadňování některých činností člověka.
             Člověk si začíná ulehčovat svou práci díky použití strojů. Postupně se dostaly do „hry“ také paliva, která
@@ -100,7 +100,7 @@
             po internetu zcela vytlačilo spontánní pohybové aktivity dětí uplatňovaných ve volném čase. Toto je možné
             vypozorovat při pohledu na
             prázdná sportovní hřiště vybudovaná u obytných zón.</p>
-          <p class="text-justify">Pasivní činnosti působí negativně na kvalitu nožní klenby, která ovlivňuje další
+          <p>Pasivní činnosti působí negativně na kvalitu nožní klenby, která ovlivňuje další
             části těla (držení těla).
             Nejde jen o to, že současná mladá generace věnuje sedavým činnostem velké množství času, ale nemá správný
             návyk sezení (nevhodné pozice vsedě,
@@ -110,7 +110,7 @@
           </p>
           <h3 class="h4 pt-4" id="item-2">Charakteristika lidské nohy</h3>
           <hr class="my-4">
-          <p class="text-justify">Lidská noha jako základní článek lidského těla slouží k lokomočnímu pohybu člověka
+          <p>Lidská noha jako základní článek lidského těla slouží k lokomočnímu pohybu člověka
             (bipedální lokomoce = chůze, běh, skoky, obraty).
             Noha je podpůrný a stabilizační orgán, který zprostředkovává kontakt s podložkou. Uchopovací vlastnost
             končeny (jako např. u opic)
@@ -121,7 +121,7 @@
             klenby může také ovlivnit držení těla.</p>
           <h3 class="h4 pt-4" id="item-3">Vývoj klenby nohy</h3>
           <hr class="my-4">
-          <p class="text-justify">Vývoj klenby nohy souvisel s napřimováním páteře v průběhu vývoje člověka. Pohyb po
+          <p>Vývoj klenby nohy souvisel s napřimováním páteře v průběhu vývoje člověka. Pohyb po
             dvou končetinách úzce souvisí s napřímením páteře v průběhu vývoje člověka.
             Při stoji, chůzi, běhu se musíme vyrovnávat s působením gravitační síly. S rozvojem dvouoporové lokomoce a
             napřímením lidského těla se rozvíjela a vznikala
@@ -136,7 +136,7 @@
             V šesti letech je nožní klenba více patrná.</p>
           <h3 class="h4 pt-4" id="item-4">Anatomie kostry nohy</h3>
           <hr class="my-4">
-          <p class="text-justify">Kostra nohy se skládá z 26 kostí (7 kostí zánártních, 5 kostí nártních, 14 kostí prstů
+          <p>Kostra nohy se skládá z 26 kostí (7 kostí zánártních, 5 kostí nártních, 14 kostí prstů
             nohy), které jsou kloubně spojeny (obrázek 2).
             Kostra nohy je zpevněna, šlachami svalů, vazy a svaly v celém svém podélném průběhu od paty ke špičce.
             Všechny tyto části tvoří pružný funkční celek.</p>
@@ -148,7 +148,7 @@
           </figure>
           <h3 class="h4 pt-4" id="item-5">Klenba nohy</h3>
           <hr class="my-4">
-          <p class="text-justify">Vyklenutou část chodidla, která nemusí být ve všech případech v kontaktu s podložkou,
+          <p>Vyklenutou část chodidla, která nemusí být ve všech případech v kontaktu s podložkou,
             můžeme nazývat nožní klenbou.
             Při stoji by se noha v ideálním případě měla dotýkat podložky patou, zevním okrajem chodila, předním okrajem
             nártních kostí a bříšky prstů.
@@ -161,7 +161,7 @@
             </a>
             <figcaption class="figure-caption text-center"><strong>Obrázek 3</strong> Podélná klenba nohy</figcaption>
           </figure>
-          <p class="text-justify">Podélná klenba (obrázek 4) se rozkládá se mezi kostmi, vazy a svaly směrem od paty k
+          <p>Podélná klenba (obrázek 4) se rozkládá se mezi kostmi, vazy a svaly směrem od paty k
             předním částem nártních kostí.
             Příčná klenba (obrázek 4) nohy prochází v oblasti kosti krychlové a kostí klínových.</p>
 
@@ -174,12 +174,12 @@
             <figcaption class="figure-caption text-center"><strong>Obrázek 4</strong> Podélná a příčná klenba nohy
             </figcaption>
           </figure>
-          <p class="text-justify">Klenba nohy zdvihá chodidlo nad podložku, čímž ovlivňuje pružnost nohy při chůzi nebo
+          <p>Klenba nohy zdvihá chodidlo nad podložku, čímž ovlivňuje pružnost nohy při chůzi nebo
             stabilizuje stoj, který vyžaduje stálou
             koordinovanou aktivitu zúčastněných svalů. Oslabením svalů a uvolněním vazů udržujících nožní klenbu klesá
             vnitřní strana nohy a tím se mění i tvar nášlapné plochy.
             Vzniká tak plochá noha, která má různé stupně (obrázek 5).</p>
-          <p class="text-justify">K oploštění klenby nohy může dojít díky:</p>
+          <p>K oploštění klenby nohy může dojít díky:</p>
           <ul type="square">
             <li>genetickým predispozicím;</li>
             <li>nemocem, úrazům;</li>
@@ -189,7 +189,7 @@
             <li>dlouhodobému stání;</li>
             <li>nadměrnou hmotností.</li>
           </ul>
-          <p class="text-justify">Níže uvádíme několik možností nevhodné obuvi:</p>
+          <p>Níže uvádíme několik možností nevhodné obuvi:</p>
           <ul type="square">
             <li>obuv se špatně tvarovanou vložkou;</li>
             <li>nepřiměřeně velká či malá obuv;</li>
@@ -198,11 +198,11 @@
             <li>těžká obuv;</li>
             <li>obuv měkká v nártu.</li>
           </ul>
-          <p class="text-justify">Za prospěšné pro udržení správně klenuté nohy a prevenci plochonoží lze považovat
+          <p>Za prospěšné pro udržení správně klenuté nohy a prevenci plochonoží lze považovat
             chůzi po nerovném povrchu: písek, louka, oblázky
             a další cvičení, které jsou součástí interaktivní prezentace. Pohybové aktivity v tomto prostředí zajišťují
             dynamickou aktivitu svalů v oblasti nožní klenby.</p>
-          <p class="text-justify">Obraz nožní klenby je možné zjistit otiskem plosky nohy (plantogramem). Tvar otisku
+          <p>Obraz nožní klenby je možné zjistit otiskem plosky nohy (plantogramem). Tvar otisku
             nohy s různou klenbou je možné vidět na obrázku 5.</p>
           <figure class="figure py-4 mx-auto d-block">
             <a class="lightbox-style" href="imgs/teorie-5.png" data-lightbox="image-5"
