--- a/plochonozi/index.html
+++ b/plochonozi/index.html
@@ -50,7 +50,7 @@
                 <h1 class="display-4">Klenba nohy</h1>
                 <p class="lead text-muted">Anatomie nohy, vývoj klenby nohy a diagnostika plochonoží.</p>
                 <p>
-                    <a href="#" class="btn btn-primary my-2">Stáhnout offline verzi</a>
+                    <a href="https://github.com/heidler/dvz/releases" class="btn btn-primary my-2">Stáhnout offline verzi</a>
                 </p>
             </div>
         </div>
